# spriteforge

./: .gitignore  ASSETS_PROVENANCE.md  LICENSE  README.md  SHOWCASE.md  pyproject.toml
.github/workflows/: ci.yml
devlog/: 2026-07-06-mixed-source-run-backfill.md  2026-07-08-data-pipeline-investigation.md  2026-07-08-palette-presets-and-source-snap.md  2026-07-08-random-pool-samples.md  2026-07-08-scraper-fixes-and-new-source.md  2026-07-08-spriters-resource-scraper.md  2026-07-08-sr-dataset-complete.md  2026-07-08-stage2-degradation-fixes.md  2026-07-08-training-pipeline-v2.md  2026-07-08-v2-retraining.md  2026-07-10-e1-palette-model-evaluation.md  NEXT_SESSION.md  TRAINING_REVIEW.md  real_input_eval_set.md
docs/: DATA_SOURCES.md  DEGRADATION.md  PLAN.md
scripts/: build_random_pool_samples.py  build_review_examples.py  build_showcase.py  build_v2_splits.py  crop_real_eval_sheets.py  diagnostic_d1_roundtrip.py  diagnostic_d2_gan_ablation.py  eval_aistyle_vs_legacy.py  eval_e1.py  eval_real_inputs.py  make_review_doc.py  reingest_fixed_sources.py  scrape_sr_expanded.py  train_all_sources.sh  train_palette_unet.py  train_sr_variants.sh  train_v2_sources.sh
spriteforge/: __init__.py  cli.py
spriteforge/app/: __init__.py  gui.py
spriteforge/core/: __init__.py  alpha.py  degrade.py  io.py  palette.py  palette_library.py  pipeline.py  resize.py
spriteforge/data/: __init__.py  dataset.py  ingest.py  provenance.py  scrapers.py
spriteforge/data/palettes/: cc29.json  dawnbringer32.json  endesga32.json  lospec500.json  mulfok32.json  palette31.json  resurrect64.json  sweetie16.json
spriteforge/export/: __init__.py  to_onnx.py
spriteforge/model/: __init__.py  config.py  discriminator.py  losses.py  palette_infer.py  palette_unet.py  vqgan.py
spriteforge/train/: __init__.py  artifacts.py  evaluate.py  train.py  train_palette.py
tests/: __init__.py  test_cli_convert.py  test_degrade.py  test_evaluate.py  test_model.py  test_palette.py  test_palette_infer.py  test_palette_library.py  test_palette_unet.py  test_pipeline.py  test_resize.py  test_train.py  test_train_palette.py
