[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spriteforge"
version = "0.1.0"
description = "High-resolution image to constrained low-pixel 2D sprite generator using OKLab palette snapping and optional neural restoration"
readme = "README.md"
requires-python = ">=3.10"
# Dual-licensed: AGPL-3.0-or-later for open-source use, or a separate commercial
# license (contact matthew.wesley.burke@gmail.com). See LICENSE.
license = {text = "AGPL-3.0-or-later OR LicenseRef-Commercial"}
authors = [
    {name = "Matthew Burke", email = "matthew.wesley.burke@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "tensorboard>=2.14.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
spriteforge = "spriteforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spriteforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
